--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                 <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                                     <h3 class="text-base sm:text-lg font-bold">2025 F1 Schedule</h3>
                                     <p class="text-xs sm:text-sm mt-2"><strong class="underline">Upcoming Races:</strong></p>
-                                    <ul id="f1-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
+                                    <ul id="f1-schedule" class="text-xs sm:text-sm list-disc list-inside space-y-4"></ul>
                                 </div>
                             </div>
                         </div>
@@ -270,5 +270,5 @@
     <script src="f1.js"></script>
     <script src="sport.js"></script>
     <script src="news.js"></script>
-</body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9288117d7a78bd3f',t:'MTc0MzM0MjU0NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
