--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <img src="images/F1.png" alt="Formula 1 Logo" class="mx-auto mb-4 h-12 sm:h-14">
                 <div id="card-f1-standings" class="bg-[url('images/Racing5.jpg')] bg-cover bg-center p-2 rounded-lg shadow-md text-white mb-4">
                     <div class="marquee-container bg-gray-800 bg-opacity-70">
-                        <span id="f1-standings-ticker" class="marquee text-sm sm:text-base"></span>
+                        <span###### id="f1-standings-ticker" class="marquee text-sm sm:text-base"></span>
                     </div>
                 </div>
                 <nav class="flex flex-wrap justify-center gap-2 sm:gap-4 border-b-2 border-gray-700 pb-4 overflow-x-auto">
@@ -223,6 +223,7 @@
                                 <div class="bg-gray-500 bg-opacity-70 p-2 rounded">
                                     <h3 class="text-base sm:text-lg font-bold">Driver Standings Visual</h3>
                                     <div id="f1-driver-standings-image" class="mt-2">
+                                        <img src="images/DStandings.png" alt="Driver Standings Visual" class="w-full max-w-md h-auto">
                                     </div>
                                 </div>
                             </div>
