--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
                                 <div class="bg-gray-500 bg-opacity-70 p-2 rounded">
                                     <h3 class="text-base sm:text-lg font-bold">Driver Standings Visual</h3>
                                     <div id="f1-driver-standings-image" class="mt-2">
+                                        <img src="images/DStandingsVisual.png" alt="Driver Standings Visual Additional" class="w-full max-w-md h-auto mb-4">
                                         <img src="images/DStandings.png" alt="Driver Standings Visual" class="w-full max-w-md h-auto">
                                     </div>
                                 </div>
@@ -238,6 +239,8 @@
                     </div>
                     <div id="f1-constructor-standings-tab" class="f1-subtab-content hidden">
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6">
+                            
+   
                             <div id="card-constructor-standings-image" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                                 <div class="bg-gray-500 bg-opacity-70 p-2 rounded">
                                     <h3 class="text-base sm:text-lg font-bold">Constructor Standings Visual</h3>
@@ -281,5 +284,5 @@
     <script src="f1.js"></script>
     <script src="sport.js"></script>
     <script src="news.js"></script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9288117d7a78bd3f',t:'MTc0MzM0MjU0NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9288117d7a78bd3f',t:'MTc0MzM0MjU0NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script><script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'929f56f2c8d71375',t:'MTc0MzU4NjU2My4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
