--- a/index.html
+++ b/index.html
@@ -218,15 +218,25 @@
                         </div>
                     </div>
                     <div id="f1-driver-standings-tab" class="f1-subtab-content hidden">
-                        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6">
-                            <div id="card-driver-standings-image" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
-                                <div class="bg-gray-500 bg-opacity-70 p-2 rounded">
-                                    <h3 class="text-base sm:text-lg font-bold">Driver Standings Visual</h3>
-                                    <div id="f1-driver-standings-image" class="mt-2">
-                                        <img src="images/DStandings.png" alt="Driver Standings Visual" class="w-full max-w-md h-auto">
-                                    </div>
-                                </div>
-                            </div>
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6">
+        <div id="card-driver-standings-image" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+            <div class="bg-gray-500 bg-opacity-70 p-2 rounded">
+                <h3 class="text-base sm:text-lg font-bold">Driver Standings Visual</h3>
+                <div id="f1-driver-standings-image" class="mt-2">
+                    <img src="images/DStandingsVisual.png" alt="Driver Standings Visual Additional" class="w-full max-w-md h-auto">
+                    <img src="images/DStandings.png" alt="Driver Standings Visual" class="w-full max-w-md h-auto">
+                </div>
+            </div>
+        </div>
+        <div id="card-driver-standings" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+            <div class="bg-gray-500 bg-opacity-70 p-2 rounded">
+                <h3 class="text-base sm:text-lg font-bold">Driver Standings</h3>
+                <div id="f1-driver-standings" class="text-sm sm:text-base mt-2">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
                             <div id="card-driver-standings" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                                 <div class="bg-gray-500 bg-opacity-70 p-2 rounded">
                                     <h3 class="text-base sm:text-lg font-bold">Driver Standings</h3>
