--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                     <button class="f1-subtab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showF1Subtab('f1-next-race-tab')">Next Race</button>
                     <button class="f1-subtab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showF1Subtab('f1-driver-standings-tab')">Driver Standings</button>
                     <button class="f1-subtab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showF1Subtab('f1-constructor-standings-tab')">Constructor Standings</button>
+                    <button class="f1-subtab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showF1Subtab('f1-results-tab')">Results</button>
                 </nav>
                 <div class="mt-4 sm:mt-6">
                     <div id="f1-next-race-tab" class="f1-subtab-content">
@@ -225,6 +226,7 @@
                                     <div id="f1-driver-standings-image" class="mt-2">
                                         <img src="images/DStandingsVisual.png" alt="Driver Standings Visual Additional" class="w-full max-w-md h-auto mb-4">
                                         <img src="images/DStandings.png" alt="Driver Standings Visual" class="w-full max-w-md h-auto">
+                                        <img src="images/Signatures.png" alt="Signatures" class="w-full max-w-md h-auto">
                                     </div>
                                 </div>
                             </div>
@@ -251,6 +253,18 @@
                                 <div class="bg-gray-500 bg-opacity-70 p-2 rounded">
                                     <h3 class="text-base sm:text-lg font-bold">Constructor Standings</h3>
                                     <div id="f1-constructor-standings" class="text-xs sm:text-sm mt-2">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="f1-results-tab" class="f1-subtab-content hidden">
+                        <div class="grid grid-cols-1 gap-4 sm:gap-6">
+                            <div id="card-results" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                                <div class="bg-gray-500 bg-opacity-70 p-2 rounded">
+                                    <h3 class="text-base sm:text-lg font-bold">Past Races</h3>
+                                    <div id="f1-results" class="text-sm sm:text-base mt-2">
+                                        <!-- Results will be populated by JavaScript -->
                                     </div>
                                 </div>
                             </div>
@@ -285,5 +299,5 @@
     <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9288117d7a78bd3f',t:'MTc0MzM0MjU0NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
     <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'929f56f2c8d71375',t:'MTc0MzU4NjU2My4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
     <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'92b1736bf97aade3',t:'MTc0Mzc3NjQ3My4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
-</body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'92b8e17afe8d1355',t:'MTc0Mzg1NDM4MS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
