--- a/index.html
+++ b/index.html
@@ -268,6 +268,8 @@
                                         <img src="images/ChinaSprintResult.png" alt="Chinese Grand Prix Sprint Result" class="w-full max-w-md h-auto mb-4">
                                         <p>2. Chinese Grand Prix</p>
                                         <img src="images/ChinaResult.png" alt="Chinese Grand Prix Result" class="w-full max-w-md h-auto">
+                                        <p>3. Japanese Grand Prix</p>
+                                        <img src="images/JapanResult.png" alt="Japanese Grand Prix Result" class="w-full max-w-md h-auto">
                                     </div>
                                 </div>
                             </div>
