--- a/index.html
+++ b/index.html
@@ -262,13 +262,13 @@
                                 <div class="bg-gray-500 bg-opacity-70 p-2 rounded">
                                     <h3 class="text-base sm:text-lg font-bold">Past Races</h3>
                                     <div id="f1-results" class="text-sm sm:text-base mt-2">
-                                        <p>1. Australian Grand Prix</p>
+                                        <p><strong>1. Australian Grand Prix</strong></p>
                                         <img src="images/AustraliaResult.png" alt="Australian Grand Prix Result" class="w-full max-w-md h-auto mb-4">
-                                        <p>2. Chinese Grand Prix Sprint</p>
+                                        <p><strong>2. Chinese Grand Prix Sprint</strong></p>
                                         <img src="images/ChinaSprintResult.png" alt="Chinese Grand Prix Sprint Result" class="w-full max-w-md h-auto mb-4">
-                                        <p>2. Chinese Grand Prix</p>
+                                        <p><strong>2. Chinese Grand Prix</strong></p>
                                         <img src="images/ChinaResult.png" alt="Chinese Grand Prix Result" class="w-full max-w-md h-auto">
-                                        <p>3. Japanese Grand Prix</p>
+                                        <p><strong>3. Japanese Grand Prix</strong></p>
                                         <img src="images/JapanResult.png" alt="Japanese Grand Prix Result" class="w-full max-w-md h-auto">
                                     </div>
                                 </div>
