--- a/index.html
+++ b/index.html
@@ -267,9 +267,9 @@
                                         <p><strong>2. Chinese Grand Prix Sprint</strong></p>
                                         <img src="images/ChinaSprintResult.png" alt="Chinese Grand Prix Sprint Result" class="w-full max-w-md h-auto mb-4">
                                         <p><strong>2. Chinese Grand Prix</strong></p>
-                                        <img src="images/ChinaResult.png" alt="Chinese Grand Prix Result" class="w-full max-w-md h-auto">
+                                        <img src="images/ChinaResult.png" alt="Chinese Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         <p><strong>3. Japanese Grand Prix</strong></p>
-                                        <img src="images/JapanResult.png" alt="Japanese Grand Prix Result" class="w-full max-w-md h-auto">
+                                        <img src="images/JapanResult.png" alt="Japanese Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                     </div>
                                 </div>
                             </div>
