--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                                 </div>
                             </div>
                             <div id="card-driver-standings" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
-                                <div class="bg-gray-500 bg-opacity-70 p-2 rounded">
+                                <div class="bg-black bg-opacity-90 p-2 rounded">
                                     <h3 class="text-base sm:text-lg font-bold">Driver Standings</h3>
                                     <div id="f1-driver-standings" class="text-sm sm:text-base mt-2">
                                     </div>
