--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <div id="f1-next-race-tab" class="f1-subtab-content">
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6">
                             <div id="card-f1" class="weather-card bg-[url('images/Racing6.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
-                                <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
+                                <div class="bg-black bg-opacity-90 p-2 rounded">
                                     <h3 class="text-base sm:text-lg font-bold">Formula 1</h3>
                                     <h4 id="f1-next-race" class="text-lg sm:text-xl font-bold" style="color: #FFFF00"></h4>
                                     <div id="f1-countdown" class="countdown-container">
@@ -209,7 +209,7 @@
                                 </div>
                             </div>
                             <div id="card-f1-schedule" class="weather-card bg-[url('images/Racing6.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
-                                <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
+                                <div class="bg-black bg-opacity-90 p-2 rounded">
                                     <h3 class="text-base sm:text-lg font-bold">2025 F1 Schedule</h3>
                                     <p class="text-xs sm:text-sm mt-2"><strong class="underline">Upcoming Races:</strong></p>
                                     <ul id="f1-schedule" class="text-xs sm:text-sm list-disc list-inside space-y-4"></ul>
