--- a/index.html
+++ b/index.html
@@ -270,6 +270,8 @@
                                         <img src="images/ChinaResult.png" alt="Chinese Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         <p><strong>3. Japanese Grand Prix</strong></p>
                                         <img src="images/JapanResult.png" alt="Japanese Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        <p><strong>4. Bahrain Grand Prix</strong></p>
+                                        <img src="images/BahrainResult.png" alt="Bahrain Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                     </div>
                                 </div>
                             </div>
